database/cloud/cloudformation_template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create S3 bucket, EC2 instance, EFS filesystem with necessary configurations

Parameters:
  BucketName:
    Type: String
    Description: Name of the S3 bucket

  KeyPairName:
    Type: String
    Description: Name of the EC2 Key Pair

  SecurityGroupName:
    Type: String
    Description: Name of the Security Group

Resources:
  Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref BucketName
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: aws:kms
              KMSMasterKeyID: alias/aws/s3

  BucketBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref Bucket
      PolicyDocument:
        Id: RequireEncryptionInTransit
        Version: '2012-10-17'
        Statement:
          - Principal: '*'
            Action: '*'
            Effect: Deny
            Resource:
              - !GetAtt Bucket.Arn
              - !Sub ${Bucket.Arn}/*
            Condition:
              Bool:
                aws:SecureTransport: 'false'

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access
      GroupName: !Ref SecurityGroupName
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref SecurityGroup
      ImageId: ami-04b4f1a9cf54c11d0 # Ubuntu Server 24.04 LTS (HVM),EBS General Purpose (SSD) Volume Type. Support available from Canonical
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt-get update -y
          sudo apt-get upgrade -y
          sudo apt-get install -y sqlite3 python3-pip build-essential

Outputs:
  BucketName:
    Description: Name of the S3 bucket
    Value: !Ref Bucket

  EC2InstanceId:
    Description: ID of the EC2 instance
    Value: !Ref EC2Instance

  EC2PublicIp:
    Description: Public IP of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
